--- a/log_viewer_demo/static/log_viewer/css/log-viewer.css
+++ b/log_viewer_demo/static/log_viewer/css/log-viewer.css
@@ -14,8 +14,26 @@ https://github.com/agusmakmun/django-log-viewer
 .django__log__viewer .footer-action {
   margin: 1em 0
 }
+.django__log__viewer .pull-left {
+  float: left;
+}
 .django__log__viewer .pull-right {
   float: right;
+}
+.django__log__viewer .btn-download {
+  color: #fff;
+  margin: .5em;
+  font-size: 13px;
+  text-align: center;
+  padding: 8px 12px;
+  border-radius: 15px;
+  -webkit-border-radius: 15px;
+  -moz-border-radius: 15px;
+  -ms-border-radius: 15px;
+  -o-border-radius: 15px;
+  background-color: #79aec8;
+  border-color: rgba(27,31,35,.15);
+  box-shadow: 0 1px 0 rgba(27,31,35,.1), inset 0 1px 0 hsla(0,0%,100%,.03);
 }
 table#log-entries thead th {
   padding: 10px 18px;
