--- a/log_viewer/templates/log_viewer/logfile_viewer.html
+++ b/log_viewer/templates/log_viewer/logfile_viewer.html
@@ -11,6 +11,7 @@
 {% endblock %}
 
 {% block extrastyle %}
+  {{ block.super }}
   <link rel="stylesheet" type="text/css" href="{% static 'admin/css/changelists.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'log_viewer/css/jquery.dataTables.min.css' %}">
   <link rel="stylesheet" type="text/css" href="{% static 'log_viewer/css/log-viewer.css' %}">
