include extrahead super block as well

--- a/log_viewer/templates/log_viewer/logfile_viewer.html
+++ b/log_viewer/templates/log_viewer/logfile_viewer.html
@@ -22,6 +22,7 @@
 {% endblock %}
 
 {% block extrahead %}
+  {{ block.super }}
   <script src="{% static 'log_viewer/js/jquery.min.js' %}"></script>
   <script src="{% static 'log_viewer/js/jquery.dataTables.min.js' %}"></script>
 {% endblock %}
