--- a/log_viewer/templates/log_viewer/logfile_viewer.html
+++ b/log_viewer/templates/log_viewer/logfile_viewer.html
@@ -86,7 +86,7 @@
 
     function loadDataTable(table_name, url_json) {
       $(table_name).DataTable({
-        pageLength: {{ files_per_page }},
+        pageLength: {{ page_length }},
         columns: [{data: 0}, {data: 1}],
         ajax: function (data, callback, settings) {
           $.ajax({
